fix wrap of header-text and style button

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ ul {
     /* gap: 16px; */
     list-style-type: none;
     margin-bottom: 0;
-    margin-left: 120px;
     margin-top: 25px;
     padding: 0;
 }
@@ -59,6 +58,7 @@ ul {
     color: #fff;
     display: flex;
     flex-direction: column;
+    width: 600px;
     gap: 24px;
 }
 
@@ -77,7 +77,17 @@ ul {
 
 .header-text button {
     align-self: flex-start;
+    background-color: #3882f6;
+    border-radius: 10px;
+    border: 2px solid #fff;
+    height: 40px;
+    width: 125px;
 
+}
+
+.header-text a {
+    color: #fff;
+    text-decoration: none;
 }
 
 /* ^ Custom fonts and style  ^ */
